@@ -46,7 +46,7 @@ class ThemeClass : public QObject
 		unsigned long				hashFromKey(QString key);
 		void							loadThemes(void);
 		const char					*entryNames[14]={"document","functions","class","types","comments","quotes","includes","numbers","keywords","custom","lanuageextra","variables","toolkit",NULL};
-		const char					*docPartNames[8]={"docbgcolour","docfgcolour","findbgcol","findfgcol","linebgcolour","linefgcolour","bookmarkbgcolour",NULL};
+		const char					*docPartNames[9]={"docbgcolour","docfgcolour","findbgcol","findfgcol","linebgcolour","linefgcolour","bookmarkbgcolour","insertcolour",NULL};
 };
 
 #endif
